# cosc-522-project-1

./: .gitignore  CMakeLists.txt  README.md  build.sh
common/: lodiMessaging.c  lodi_messaging.c  lodi_messaging.h  messaging.h  pkeMessaging.c  pkeMessaging.h  pke_messaging.c  tfaMessaging.c  tfaMessaging.h  tfa_messaging.c
echo-example/: UDPEchoClient.c  udp_echo_server.c
include/: authentication.h  domain.h  shared.h
include/logging/: logging.h
include/messaging/: lodi_messaging.h  pke_messaging.h  tfa_messaging.h  udp.h  utils.h
include/util/: buffers.h  rsa.h  server_configs.h
lodi-client/: lodiClient.c  lodi_client.c
pke-server/: pkeServer.c  pke_server.c
src/echo-example-udp/: udp_echo_client.c  udp_echo_server.c
src/lodi-client/: lodi_client.c
src/lodi-server/: lodi_server.c
src/pke-server/: key_repository.c  key_repository.h  pke_server.c
src/rsa-test/: rsa_test.c
src/rsa-utils/: rsa_generate.c
src/shared/: domain.c
src/shared/logging/: logging.c
src/shared/messaging/: lodi_messaging.c  pke_messaging.c  tfa_messaging.c  udp.c  utils.c
src/shared/util/: authentication.c  buffer.c  rsa.c  server_configs.c
src/tfa-client/: tfa_client.c
src/tfa-server/: registration_repository.c  registration_repository.h  tfa_server.c
tfa-client/: tfaClient.c
tfa-server/: tfaServer.c  tfa_server.c
